--- a/shows.html
+++ b/shows.html
@@ -25,23 +25,23 @@
     />
     <link
       rel="stylesheet"
-      href="lib/swiper.css"
+      href="/lib/swiper.css"
     />
     <link
       rel="stylesheet"
-      href="lib/fontawesome.css"
+      href="/lib/fontawesome.css"
     />
     <link
       rel="stylesheet"
-      href="css/style.css"
+      href="/css/style.css"
     />
     <link
       rel="stylesheet"
-      href="css/spinner.css"
+      href="/css/spinner.css"
     />
-    <script src="lib/swiper.js"></script>
+    <script src="/lib/swiper.js"></script>
     <script
-      src="js/script.js"
+      src="/js/script.js"
       defer
     ></script>
     <title>CINEZONE</title>
