--- a/index.html
+++ b/index.html
@@ -85,12 +85,11 @@
       <div class="container">
         <div id="alert"></div>
         <form action="./search.html" class="search-form">
-
           <div class="search-radio">
             <input type="radio" id="movie" name="type" value="movie" checked />
-            <label for="movies">Movies</label>
+            <label for="movie">Movies</label>
             <input type="radio" id="tv" name="type" value="tv" />
-            <label for="shows">TV Shows</label>
+            <label for="tv">TV Shows</label>
           </div>
           <div class="search-flex">
             <input
