search.html  change

--- a/search.html
+++ b/search.html
@@ -91,7 +91,7 @@
 
     <!-- Search Results -->
     <section id="search-results-wrapper" class="container">
-      <heading id="search-results-heading"></heading>
+      <div id="search-results-heading"></div>
       <div id="search-results" class="grid">
         <!-- <div class="card">
           <a href="#">
