search and pagination changes

--- a/search.html
+++ b/search.html
@@ -103,15 +103,9 @@
               <small class="text-muted">Release: XX/XX/XXXX</small>
             </p>
           </div>
-        </div>
-      </div>
-      <div id="pagination"> -->
-<!-- 
-       <div class="pagination"> 
-         <button class="btn btn-primary" id="prev">Prev</button> 
-          <button class="btn btn-primary" id="next">Next</button>
-          <div class="page-counter">Page 1 of 5</div>
         </div> -->
+      </div>
+      <div id="pagination">
       </div>
     </section>
 
