--- a/index.html
+++ b/index.html
@@ -68,15 +68,12 @@
       <h2>Now Playing</h2>
       <div class="swiper">
         <div class="swiper-wrapper">
-          <!-- <div class="swiper-slide">
-            <a href="movie-details.html?id=1">
-              <img src="./images/no-image.jpg" alt="Movie Title" />
-            </a>
-            <h4 class="swiper-rating">
-              <i class="fas fa-star text-secondary"></i> 8 / 10
-            </h4>
-          </div> -->
+          <!-- Slides will be dynamically added here -->
         </div>
+        <!-- Add pagination and navigation -->
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
       </div>
     </section>
 
